tests/wpt/tests/third_party/test262/test/language/block-scope/syntax/redeclaration/var-redeclaration-attempt-after-const.js
// This file was procedurally generated from the following sources:
// - src/declarations/const.case
// - src/declarations/redeclare/block-attempt-to-redeclare-var-declaration-after.template
/*---
description: redeclaration with const-LexicalDeclaration (VariableDeclaration in BlockStatement)
esid: sec-block-static-semantics-early-errors
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Block : { StatementList }

    It is a Syntax Error if any element of the LexicallyDeclaredNames of
    StatementList also occurs in the VarDeclaredNames of StatementList.

---*/


$DONOTEVALUATE();

{ const f = 0; var f; }
